# overwatch_manager_server

./: .gitignore  CMakeLists.txt  config.cpp  config.h  configurer.cpp  configurer.h  connection.h  dbconfig.h  main.cpp  networkconfig.h  pendingconnection.cpp  pendingconnection.h  protocol.h
configs/: configurer.cpp  dbconfig.cpp  dbconfig.h  networkconfig.cpp  networkconfig.h
network/: tcpserver.cpp  tcpserver.h
network/connections/: connection.cpp
